--- a/config/husky_control.yaml
+++ b/config/husky_control.yaml
@@ -1,4 +1,4 @@
-husky_reduced:
+husky:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
